Chapter 5 bookmark WIP

--- a/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
+++ b/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
@@ -472,45 +472,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([64])\n",
+      "--- [x] is independent variable => [TensorImage]    shape [torch.Size([3, 224, 224])] --- \n",
       "\n",
-      "# [y] is our dependent variable\n",
-      "TensorCategory([ 1, 13,  2, 19, 16, 21,  3, 25, 32, 28, 27, 30, 11, 31, 15,  0,\n",
-      "                26, 34, 14, 36, 28, 23, 12, 35, 34, 15,  9, 33, 19, 31, 11, 24,\n",
-      "                30, 12,  5, 16,  7, 14, 29,  3, 12,  0, 12, 12,  3, 24,  9, 33,\n",
-      "                 8, 19,  2,  7, 16, 18, 19, 22,  3,  8, 13, 11, 20, 15, 36, 17])\n"
+      "--- [y] is dependent   variable => [TensorCategory] shape [torch.Size([64])] --- \n",
+      "\n",
+      "TensorCategory([26,  3,  1, 29,  8, 14, 13, 13, 15, 11, 32, 20,  3, 22, 31, 28,\n",
+      "                28,  8, 31, 27, 33, 21, 13, 36, 28, 20,  3,  2, 22, 26, 18, 30,\n",
+      "                 0,  1,  3, 32, 12,  3,  5,  5, 30, 27, 21, 21, 12, 31, 28, 27,\n",
+      "                15, 18,  6,  7, 16, 32,  7, 17,  1, 19, 24, 10, 32,  3,  7,  4])\n"
      ]
     }
    ],
    "source": [
     "# Let's step through and to see what's happening under the hood for a batch \n",
     "# with cross entropy by VIEWING our ACTIVATION and LABELS\n",
+    "\n",
+    "# one_batch() returns a REAL batch of data from DataLoader as mini-batches :\n",
+    "# @note 🧠 [x] = TensorImage torch.Size([3, 224, 224])\n",
+    "# @note 🧠 [y] = TensorCategory torch.Size([64]]) with integer bewtween 0 and 36\n",
+    "#       to categorize the 37 possible pet breeds\n",
     "x,y = dls.one_batch()\n",
-    "# Our batch size is 64 so we have 64 rows\n",
-    "# Each row has an integer between 0 and 36 (37 possible pet breeds)\n",
-    "\n",
-    "''' \n",
-    "torch.Size([64])\n",
-    "\n",
-    "# [y] is our dependent variable\n",
-    "TensorCategory([ 1, 13,  2, 19, 16, 21,  3, 25, 32, 28, 27, 30, 11, 31, 15,  0,\n",
-    "                26, 34, 14, 36, 28, 23, 12, 35, 34, 15,  9, 33, 19, 31, 11, 24,\n",
-    "                30, 12,  5, 16,  7, 14, 29,  3, 12,  0, 12, 12,  3, 24,  9, 33,\n",
-    "                 8, 19,  2,  7, 16, 18, 19, 22,  3,  8, 13, 11, 20, 15, 36, 17])\n",
-    "'''\n",
-    "print(f'{y.shape}\\n\\n# [y] is our dependent variable\\n{y}')"
+    "# @audit-ok ☑ : Explain howcome one_batch() returns batch size of 64\n",
+    "# ANSWER : A batch size of 64 is a good size to use when training \n",
+    "# a neural network, as it allows the network to take advantage of \n",
+    "# - parallelization and process the data quickly \n",
+    "# - Additionally, the batch size of 64 is large enough that the model can learn \n",
+    "#   from the data and small enough that it is not too computationally expensive \n",
+    "#   to process the data\n",
+    "print(f'--- [x] is independent variable => [TensorImage]    shape [{x[0].shape}] --- \\n')\n",
+    "print(f'--- [y] is dependent   variable => [TensorCategory] shape [{y.shape}] --- \\n\\n{y}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -527,16 +529,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorBase([5.7153e-03, 9.6459e-01, 3.1660e-05, 3.2279e-04, 3.9579e-04,\n",
-      "            5.6193e-03, 1.6308e-02, 4.0963e-05, 1.4883e-04, 9.2817e-04,\n",
-      "            7.4291e-04, 1.4821e-03, 3.1568e-04, 2.3637e-04, 8.3650e-05,\n",
-      "            3.0780e-05, 2.1360e-05, 1.6802e-05, 3.2492e-05, 4.6428e-05,\n",
-      "            8.0461e-04, 1.1624e-05, 2.3775e-06, 4.2128e-05, 1.1736e-05,\n",
-      "            3.0074e-04, 3.2781e-05, 1.8415e-04, 3.5385e-05, 7.7810e-06,\n",
-      "            3.7257e-04, 3.2631e-05, 5.3509e-05, 1.7909e-04, 7.5662e-05,\n",
-      "            7.3006e-04, 1.8075e-05]) # predictions\n",
+      "---[predictions] TensorBase shape => [torch.Size([37])]---\n",
       "\n",
-      "37 => 1.0000001192092896 # verify that preditions sum to 1.0f\n"
+      "TensorBase([2.6677e-07, 4.9440e-07, 4.5094e-08, 8.4627e-07, 9.9369e-08,\n",
+      "            1.1365e-07, 1.9111e-09, 3.4583e-08, 1.6918e-08, 1.8144e-06,\n",
+      "            6.6939e-07, 5.2592e-08, 8.3388e-08, 1.8312e-04, 2.3053e-05,\n",
+      "            1.5483e-06, 3.9228e-04, 8.9721e-05, 4.7637e-05, 2.9412e-07,\n",
+      "            3.1984e-07, 8.9358e-08, 2.6279e-07, 2.9253e-08, 2.3936e-06,\n",
+      "            1.6982e-06, 9.9910e-01, 3.4370e-08, 2.5460e-07, 2.0432e-07,\n",
+      "            1.9605e-08, 7.8100e-08, 7.2664e-07, 1.1920e-05, 1.3204e-04,\n",
+      "            3.6134e-07, 3.9145e-06])\n",
+      "\n",
+      "# verify that predictions length [37] sum to 1.0f => [1.0000001192092896]\n"
      ]
     }
    ],
@@ -549,54 +553,20 @@
     "# - we are feeding in a single batch of data\n",
     "# - we already have targets, so we ignore the 2nd return value by assigning it \n",
     "#   to the special variable._\n",
+    "# @note 🧠 [preds] = TensorBase => [torch.Size([37])] for 37 possible pet breeds\n",
+    "# @audit-ok 🔎 : Explain TensorBase and how it relates to TensorImage and TensorCategory\n",
+    "# TensorBase is a base class for tensors in the torch library. It is the \n",
+    "# parent class for tensors such as TensorImage and TensorCategory, which are \n",
+    "# specific tensor types used to store images and categories. TensorBase \n",
+    "# provides basic methods, such as getitem, len and repr, which are used to \n",
+    "# access, query and display the data stored in the tensors. As such, \n",
+    "# TensorBase forms the foundation for the other tensor types, and is essential \n",
+    "# for working with images and categories in the torch library\n",
+    "# @note ⚠️ : learn.get_preds() ~ 3.3 seconds\n",
     "preds,_ = learn.get_preds(dl=[(x,y)]) # type: ignore\n",
-    "print(f'{preds[0]} # predictions\\n')\n",
-    "''' \n",
-    "TensorBase([1.0386e-01, 3.7812e-03, 1.5077e-05, 5.1468e-04, 1.7222e-02,\n",
-    "            6.0446e-01, 8.6509e-04, 3.0749e-05, 2.1816e-04, 2.3888e-01,\n",
-    "            4.0005e-03, 1.8520e-02, 2.2245e-04, 6.1414e-05, 1.1467e-04,\n",
-    "            8.1134e-04, 1.0872e-04, 1.3128e-03, 2.3078e-05, 3.1218e-04,\n",
-    "            2.1534e-03, 1.2851e-04, 1.5679e-05, 7.6531e-05, 2.7364e-06,\n",
-    "            1.4678e-04, 5.5067e-04, 9.3135e-06, 9.0043e-05, 2.0370e-05,\n",
-    "            3.0322e-04, 1.5888e-04, 2.2775e-05, 1.6903e-04, 3.4568e-04,\n",
-    "            4.4591e-04, 2.9030e-05]) # predictions\n",
-    "'''\n",
-    "\n",
+    "print(f'---[predictions] TensorBase shape => [{preds[0].shape}]---\\n\\n{preds[0]}\\n')\n",
     "# The actual predictions are 37 probabilities that sum to 1.0f\n",
-    "''' \n",
-    "TensorBase([1.0386e-01, 3.7812e-03, 1.5077e-05, 5.1468e-04, 1.7222e-02,\n",
-    "            6.0446e-01, 8.6509e-04, 3.0749e-05, 2.1816e-04, 2.3888e-01,\n",
-    "            4.0005e-03, 1.8520e-02, 2.2245e-04, 6.1414e-05, 1.1467e-04,\n",
-    "            8.1134e-04, 1.0872e-04, 1.3128e-03, 2.3078e-05, 3.1218e-04,\n",
-    "            2.1534e-03, 1.2851e-04, 1.5679e-05, 7.6531e-05, 2.7364e-06,\n",
-    "            1.4678e-04, 5.5067e-04, 9.3135e-06, 9.0043e-05, 2.0370e-05,\n",
-    "            3.0322e-04, 1.5888e-04, 2.2775e-05, 1.6903e-04, 3.4568e-04,\n",
-    "            4.4591e-04, 2.9030e-05]) # predictions\n",
-    "37 => 1.0 # verify that preditions sum to 1.0f\n",
-    "'''\n",
-    "print(f'{len(preds[0])} => {preds[0].sum()} # verify that preditions sum to 1.0f')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TensorCategory([24, 11, 13, 35,  3,  0, 32, 19, 19,  5,  7, 29, 31, 26,  2, 17,\n",
-      "                35,  5,  8, 11, 26, 23,  7,  1, 34, 24, 19, 29, 24, 21, 19, 28,\n",
-      "                 7,  2, 24, 19, 12, 34, 16, 12, 21, 14, 12, 35, 18, 27,  3,  0,\n",
-      "                28,  7, 22,  4, 21, 25, 28, 17, 11, 11, 31, 20, 32, 36,  1,  7]) # our dependent variable\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "print(f'{y} # our dependent variable\\n')"
+    "print(f'# verify that predictions length [{len(preds[0])}] sum to 1.0f => [{preds[0].sum()}]')"
    ]
   },
   {
