--- a/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
+++ b/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
@@ -380,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- LEARNERS ---\n",
+    "--- LEARNERS [X] IMAGE [Y] CATEGORY ---\n",
     "\n",
     "Generally it's recommmended to start trainging as SOON as possible, \n",
     "as soon as our DATA is set up :\n",
@@ -462,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- CROSS ENTROPY ---\n",
+    "--- LOSS FUNCTION [CROSS ENTROPY] ---\n",
     "\n",
     "Cross Entropy Loss are a good DEFAULT :\n",
     " 1) When our DEPENDENT variable output are from > 2 CATEGORIES ...\n",
@@ -570,8 +570,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- FINAL LAYER ACTIVATION [SOFTMAX] ---\n",
+    "\n",
+    "\n",
+    "Softmax good ACTIVATION function in the FINAL layer of a CLASSIFCATION model \n",
+    "\n",
+    "because they ensure that the activations are all :\n",
+    "\n",
+    "- between 0 and 1\n",
+    "- they sum up to 1\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -591,84 +608,135 @@
     "from fastai.vision.core import torch\n",
     "from fastbook import plot_function\n",
     "\n",
-    "# Softmax\n",
-    "\n",
+    "# Softmax is similar to sigmoid, here's a reminder of what sigmoid looks like\n",
+    "# Sigmoid when applied to a single column of activations, we will get a column\n",
+    "# of values between 0 and 1\n",
+    "# But if we have MORE categories in our target (37 pet breeds in this case),\n",
+    "# @note 🧠 : we need an ACITVATION per CATEGORY as oppposed to Sigmoid's per COLUMN\n",
     "plot_function(torch.sigmoid, min=-4, max=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.5630,  0.1123],\n",
-       "        [ 1.0454, -0.4767],\n",
-       "        [-0.0998,  1.0527],\n",
-       "        [-0.0170,  1.4581],\n",
-       "        [ 0.2663,  1.7280],\n",
-       "        [-2.0313, -1.7775]])"
+       "tensor([[ 2.2206, -3.3796],\n",
+       "        [-1.9779,  1.9159],\n",
+       "        [ 2.6443,  1.6344],\n",
+       "        [-1.5317, -1.5012],\n",
+       "        [ 2.7051,  1.3726],\n",
+       "        [-0.6555,  1.5899]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# random numbers with a standard deviation of 2\n",
-    "# TODO : why? Understand standard deviation kk\n",
-    "# For this example we assume 6 images and 2 categories : 3s and 7s\n",
+    "# So we need something MORE than SIGMOID\n",
+    "# Let's start with a simpler 2 category (3s and 7s) example (as opposed to the \n",
+    "# 37 breeds) to better understand what's going on\n",
+    "# A good first step towards creating the more GENERAL approach :\n",
+    "\n",
+    "# For this toy example we assume 6 images and 2 categories : 3s and 7s\n",
     "acts = torch.randn((6,2))*2 # multiply by 2 = standard deviation of 2 \n",
+    "# random numbers with a standard deviation of 2\n",
+    "# @audit-ok ☑ : Explain why we are using a standard deviation of 2 to generate \n",
+    "# random numbers\n",
+    "# ANSWER : The standard deviation of 2 is used when generating random numbers \n",
+    "# to ensure that the data is spread out and not clustered in one area. \n",
+    "# By using a standard deviation of 2, it allows for more randomness in the \n",
+    "# generated numbers and prevents any patterns from forming. This is important \n",
+    "# for ensuring that the generated data is useful and accurate. Additionally, \n",
+    "# a standard deviation of 2 also helps to ensure that the data follows the \n",
+    "# normal distribution and that the generated numbers are distributed in a more \n",
+    "# natural and expected way.\n",
     "acts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.6372, 0.5281],\n",
-       "        [0.7399, 0.3830],\n",
-       "        [0.4751, 0.7413],\n",
-       "        [0.4958, 0.8112],\n",
-       "        [0.5662, 0.8492],\n",
-       "        [0.1160, 0.1446]])"
+       "tensor([[0.9021, 0.0329],\n",
+       "        [0.1215, 0.8717],\n",
+       "        [0.9337, 0.8368],\n",
+       "        [0.1777, 0.1822],\n",
+       "        [0.9373, 0.7978],\n",
+       "        [0.3417, 0.8306]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# normalizes values to be between 0 and 1\n",
+    "# We want the probability of being a 3 plus the probability of being a 7 to add\n",
+    "# up to 1.0f ... @audit 🛑 ... is this true?\n",
+    "# @note 🧠 : applying SIGMOID directly does NOT add up to 1.0f, this doesn't work\n",
     "acts.sigmoid()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([0.6108, 0.8209, 0.2400, 0.1862, 0.1882, 0.4369])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.9963, 0.0200, 0.7330, 0.4924, 0.7912, 0.0957])\n",
+      "\n",
+      "    [3]       [7]       [SUM]   [SIGMOID]    [ROW]\n",
+      "-------   -------      ------   ---------    ----- \n",
+      "[ 2.22] - [-3.38]  =    5.60     [0.996]      [0]\n",
+      "\n",
+      "[-1.98] - [ 1.92]  =   -3.89     [0.020]      [1]\n",
+      "\n",
+      "[ 2.64] - [ 1.63]  =    1.01     [0.733]      [2]\n",
+      "\n",
+      "[-1.53] - [-1.50]  =   -0.03     [0.492]      [3]\n",
+      "\n",
+      "[ 2.71] - [ 1.37]  =    1.33     [0.791]      [4]\n",
+      "\n",
+      "[-0.66] - [ 1.59]  =   -2.25     [0.096]      [5]\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "(acts[:,0]-acts[:,1]).sigmoid()"
+    "# Hmmmm so somehow we went from 2 columns to 1 column ... what is happening LoL\n",
+    "# - Somehow we want to reframe binary problems to serve as a more general classifier\n",
+    "# to handle an arbitrary number of categories\n",
+    "# So what does the value of a pair of activations represent?\n",
+    "# - A single pair of activations simply indicate the relative difference \n",
+    "#   confidence whether the input is a 3 or a 7\n",
+    "# - The larger the difference, the more confident we are that the input is a 3\n",
+    "# - The smaller the difference, the more confident we are that the input is a 7\n",
+    "# - So the overall value does NOT MATTER, whether they SUM to be HIGH or LOW\n",
+    "# - What MATTERS is the RELATIVE DIFFERENCE between the two values : WHICH is \n",
+    "#   HIGHER and BY HOW MUCH\n",
+    "\n",
+    "# @audit 🖶 -- [3] [7] [SUM] [SIGMOID] [ROW]\n",
+    "print(f'{(acts[:,0]-acts[:,1]).sigmoid()}\\n')\n",
+    "print('    [3]       [7]       [SUM]   [SIGMOID]    [ROW]')\n",
+    "print('-------   -------      ------   ---------    ----- ')\n",
+    "current_row = 0\n",
+    "for row in acts:\n",
+    "    sum_row = row[0] - row[1]\n",
+    "    print(f'[{row[0]:5.2f}] - [{row[1]:5.2f}]  =   {sum_row:5.2f}     [{sum_row.sigmoid():5.3f}]      [{current_row}]\\n')\n",
+    "    current_row += 1\n"
    ]
   },
   {
