Chapter 5 softmax == sigmoid verify

--- a/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
+++ b/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -698,44 +698,44 @@
      "text": [
       "tensor([0.9963, 0.0200, 0.7330, 0.4924, 0.7912, 0.0957])\n",
       "\n",
-      "    [3]       [7]       [SUM]   [SIGMOID]    [ROW]\n",
-      "-------   -------      ------   ---------    ----- \n",
-      "[ 2.22] - [-3.38]  =    5.60     [0.996]      [0]\n",
-      "\n",
-      "[-1.98] - [ 1.92]  =   -3.89     [0.020]      [1]\n",
-      "\n",
-      "[ 2.64] - [ 1.63]  =    1.01     [0.733]      [2]\n",
-      "\n",
-      "[-1.53] - [-1.50]  =   -0.03     [0.492]      [3]\n",
-      "\n",
-      "[ 2.71] - [ 1.37]  =    1.33     [0.791]      [4]\n",
-      "\n",
-      "[-0.66] - [ 1.59]  =   -2.25     [0.096]      [5]\n",
-      "\n"
+      "[ROW]      [3]       [7]      [SUM]    [SIGMOID]   [IS_THREE]  \n",
+      "-----  -------   -------     -------   ---------   ---------- \n",
+      " [0]   [ 2.22] - [-3.38]  =    5.60     [0.996]         1     \n",
+      " [1]   [-1.98] - [ 1.92]  =   -3.89     [0.020]         0     \n",
+      " [2]   [ 2.64] - [ 1.63]  =    1.01     [0.733]         1     \n",
+      " [3]   [-1.53] - [-1.50]  =   -0.03     [0.492]         0     \n",
+      " [4]   [ 2.71] - [ 1.37]  =    1.33     [0.791]         1     \n",
+      " [5]   [-0.66] - [ 1.59]  =   -2.25     [0.096]         0     \n"
      ]
     }
    ],
    "source": [
-    "# Hmmmm so somehow we went from 2 columns to 1 column ... what is happening LoL\n",
-    "# - Somehow we want to reframe binary problems to serve as a more general classifier\n",
-    "# to handle an arbitrary number of categories\n",
-    "# So what does the value of a pair of activations represent?\n",
-    "# - A single pair of activations simply indicate the relative difference \n",
-    "#   confidence whether the input is a 3 or a 7\n",
-    "# - The larger the difference, the more confident we are that the input is a 3\n",
-    "# - The smaller the difference, the more confident we are that the input is a 7\n",
-    "# - So the overall value does NOT MATTER, whether they SUM to be HIGH or LOW\n",
-    "# - What MATTERS is the RELATIVE DIFFERENCE between the two values : WHICH is \n",
-    "#   HIGHER and BY HOW MUCH\n",
+    "# To reframe 3 or 7 binary activation to serve as a more general classifier, we\n",
+    "# will go from applying SIGMOID() to 2 columns to just ONE column of DIFFERENCE\n",
+    "# between ACTIVATION values for 3 and 7\n",
+    "# - This will let us handle an arbitrary number of categories\n",
     "\n",
+    "# Let's walk through why this works ...\n",
     "# @audit 🖶 -- [3] [7] [SUM] [SIGMOID] [ROW]\n",
     "print(f'{(acts[:,0]-acts[:,1]).sigmoid()}\\n')\n",
-    "print('    [3]       [7]       [SUM]   [SIGMOID]    [ROW]')\n",
-    "print('-------   -------      ------   ---------    ----- ')\n",
+    "print('[ROW]      [3]       [7]      [SUM]    [SIGMOID]   [IS_THREE]  ')\n",
+    "print('-----  -------   -------     -------   ---------   ---------- ')\n",
     "current_row = 0\n",
+    "# So what does the value of a pair of activations represent?\n",
     "for row in acts:\n",
+    "    # A single pair of activations simply indicate the relative difference \n",
+    "    # confidence whether the input is a 3 or a 7\n",
+    "    # - So the overall value does NOT MATTER, whether they SUM to be HIGH or LOW\n",
+    "    # - What MATTERS is the RELATIVE DIFFERENCE between the two values : WHICH is \n",
+    "    #   HIGHER and BY HOW MUCH\n",
     "    sum_row = row[0] - row[1]\n",
-    "    print(f'[{row[0]:5.2f}] - [{row[1]:5.2f}]  =   {sum_row:5.2f}     [{sum_row.sigmoid():5.3f}]      [{current_row}]\\n')\n",
+    "    # sigmoid() NORMALIZES the DIFFERENCE between the two values to 0 and 1\n",
+    "    sum_sigmoid = sum_row.sigmoid()\n",
+    "    # if sigmoid() of the difference is > 0.5 :\n",
+    "    # - The LARGER the difference, the more confidence that the input is a 3\n",
+    "    # - The SMALLER the difference, the more confidence that the input is a 7\n",
+    "    is_three = sum_sigmoid > 0.5\n",
+    "    print(f' [{current_row}]   [{row[0]:5.2f}] - [{row[1]:5.2f}]  =   {sum_row:5.2f}     [{sum_sigmoid:5.3f}]     {is_three:^10}')\n",
     "    current_row += 1\n"
    ]
   },
@@ -745,10 +745,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# softmax is the multi-category equivalent of sigmoid\n",
-    "# use it whenever we have more than 2 categories and the probability of each\n",
-    "# category should sum to 1.0f\n",
-    "# NOTE : often used even when there's only 2 categories for consistency lol\n",
+    "# Now we need to make this work for more than 2 columns/categories (three/seven)\n",
+    "# @note 🧠 : Softmax is the multi-category extension to sigmoid, applicable when: \n",
+    "# - categories > 2  \n",
+    "# - AND the probability of each category should sum to 1.0f\n",
     "# Intuitively the softmax function REALLY wants to pick one class among the \n",
     "# others, given exponential AMPLIFIES any slight relative differences\n",
     "def softmax(x):\n",
@@ -761,28 +761,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[0.6108, 0.3892],\n",
-       "        [0.8209, 0.1791],\n",
-       "        [0.2400, 0.7600],\n",
-       "        [0.1862, 0.8138],\n",
-       "        [0.1882, 0.8118],\n",
-       "        [0.4369, 0.5631]])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ROW]  [SIGMOID]   [SOFTMAX(IS_3)]  [IS_SEVEN]\n",
+      "-----  ---------   ---------------  ----------\n",
+      " [0]    [0.996]        [0.996]       [0.004]\n",
+      " [1]    [0.020]        [0.020]       [0.980]\n",
+      " [2]    [0.733]        [0.733]       [0.267]\n",
+      " [3]    [0.492]        [0.492]       [0.508]\n",
+      " [4]    [0.791]        [0.791]       [0.209]\n",
+      " [5]    [0.096]        [0.096]       [0.904]\n"
+     ]
     }
    ],
    "source": [
+    "# @audit 🖶 : Verify that SOFTMAX returns same value as SIGMOID for 2 categories\n",
+    "# where both columns/categories sum to 1.0f\n",
     "sm_acts = torch.softmax(acts, dim=1)\n",
-    "sm_acts"
+    "print('[ROW]  [SIGMOID]   [SOFTMAX(IS_3)]  [IS_SEVEN]')\n",
+    "print('-----  ---------   ---------------  ----------')\n",
+    "for i in range(len(sm_acts)):\n",
+    "    sum_sigmoid = (acts[i][0] - acts[i][1]).sigmoid()\n",
+    "    print(f' [{i}]    [{sum_sigmoid:5.3f}]        [{sm_acts[i][0]:5.3f}]       [{sm_acts[i][1]:5.3f}]')\n",
+    "#sm_acts"
    ]
   },
   {
