chapter 5 pretty up Jupyter Markdowns

--- a/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
+++ b/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
@@ -5,8 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- IMAGE CLASSIFICATION ---\n",
-    "\n",
+    "**`--- IMAGE CLASSIFICATION ---`**\n",
+    "***\n",
     "From dogs and cats => breeds"
    ]
   },
@@ -79,7 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- REGEX FILE PATH => NAME ---"
+    "**`--- REGEX FILE PATH => NAME ---`**\n",
+    "***"
    ]
   },
   {
@@ -112,7 +113,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- DATABLOCK : CROP AND SPLIT ---"
+    "**`--- DATABLOCK : CROP AND SPLIT ---`**\n",
+    "***"
    ]
   },
   {
@@ -259,7 +261,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- DEBUG : SUMMARY EXAMPLE ---"
+    "**`--- DEBUG : SUMMARY EXAMPLE ---`**\n",
+    "***"
    ]
   },
   {
@@ -380,10 +383,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- LEARNERS [X] IMAGE [Y] CATEGORY ---\n",
+    "**`--- LEARNERS [X] IMAGE [Y] CATEGORY ---`**\n",
+    "***\n",
     "\n",
-    "Generally it's recommmended to start trainging as SOON as possible, \n",
-    "as soon as our DATA is set up :\n",
+    "Generally it's recommmended to start training as `SOON` as possible, once our \n",
+    "DATA is set up :\n",
     " - independent (x, images) and dependent (y, labels) are setup correctly\n",
     " - loss function verified\n",
     " - augmented for batching"
@@ -462,11 +466,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- LOSS FUNCTION [CROSS ENTROPY] ---\n",
-    "\n",
-    "Cross Entropy Loss are a good DEFAULT :\n",
-    " 1) When our DEPENDENT variable output are from > 2 CATEGORIES ...\n",
-    " 2) But the output is only ONE label ...\n",
+    "**`--- LOSS FUNCTION [CROSS ENTROPY] ---`**\n",
+    "***\n",
+    "Cross Entropy Loss are a good `DEFAULT` :\n",
+    " 1) When our `DEPENDENT` variable output are from > 2 CATEGORIES ...\n",
+    " 2) But the output is only `ONE` label ...\n",
     " 3) Use [BINARY Cross Entropy] (next chapter) for when OUTPUT can be MULTI-label"
    ]
   },
@@ -574,16 +578,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- FINAL LAYER ACTIVATION [SOFTMAX] ---\n",
+    "**`--- FINAL LAYER ACTIVATION [1/2] [SOFTMAX] ---`**\n",
     "\n",
+    "***\n",
+    "SOFTMAX is [1/2] of CROSS ENTROPY LOSS\n",
+    "***\n",
     "\n",
-    "Softmax good ACTIVATION function in the FINAL layer of a CLASSIFCATION model \n",
+    "SOFTMAX is a good `ACTIVATION` function in the `FINAL` layer of a `CLASSIFCATION` model \n",
+    "because they ensure that the activations:\n",
     "\n",
-    "because they ensure that the activations are all :\n",
+    "- `between 0 and 1`\n",
+    "- they `sum up to 1`\n",
     "\n",
-    "- between 0 and 1\n",
-    "- they sum up to 1\n",
-    "\n"
+    "What does the `SOFTMAX` function do in `PRACTICE`?\n",
+    " - Taking the exponential ensures all our numbers are positive\n",
+    " - Dividing the sum ensures all the numbers add up to 1.0f\n",
+    " Intuitively the softmax function `REALLY` wants to pick one class among\n",
+    " others, given exponential `AMPLIFIES` any slight relative `DIFFERENCES`\n",
+    " - This makes it suitable for using as a `PROBABILITY DISTRIBUTION`, and even \n",
+    " practical for binary classification (2) instead of SIGMOID for consistency\n",
+    "\n",
+    "***\n",
+    "Summarize the difference between `SOFTMAX` and `SIGMOID`\n",
+    "\n",
+    "`ANSWER` : The difference is :\n",
+    " - Sigmoid is used as an activation function in the hidden layers of \n",
+    "   neural networks to transform the inputs into outputs between 0 and 1 \n",
+    " - Softmax, on the other hand, is used to provide the probability distribution \n",
+    "   of a given set of classes in the input. When using softmax, increasing the \n",
+    "   probability of one class will decrease the total probability of all other \n",
+    "   classes, as they must sum to 1. \n",
+    " - Additionally, softmax is more stable than sigmoid, and can handle a wide \n",
+    "   range of inputs.\n",
+    "***\n",
+    "Explain when would it make sense to use `SIGMOID` instead of `SOFTMAX`\n",
+    "\n",
+    "`ANSWER` : Softmax is fit for training classifiers when : \n",
+    " - we KNOW there's a DEFINITIVE label for each input\n",
+    " - but at inference STRUGGLES when NO recognizable trained label is found, it\n",
+    "   will ERRONEASLY pick whatever HAPPENSTANCE label with a SLIGHTLY higher \n",
+    "   activation ... in this case training a SIGMOID activation using multiple\n",
+    "   binary output columns may yield better results\n",
+    "***\n"
    ]
   },
   {
@@ -749,8 +785,6 @@
     "# @note 🧠 : Softmax is the multi-category extension to sigmoid, applicable when: \n",
     "# - categories > 2  \n",
     "# - AND the probability of each category should sum to 1.0f\n",
-    "# Intuitively the softmax function REALLY wants to pick one class among the \n",
-    "# others, given exponential AMPLIFIES any slight relative differences\n",
     "def softmax(x):\n",
     "    # exp = exponential function\n",
     "    # defined as e**x, where is is approximately 2.718\n",
@@ -780,15 +814,26 @@
     }
    ],
    "source": [
+    "sm_acts = torch.softmax(acts, dim=1)\n",
     "# @audit 🖶 : Verify that SOFTMAX returns same value as SIGMOID for 2 categories\n",
     "# where both columns/categories sum to 1.0f\n",
-    "sm_acts = torch.softmax(acts, dim=1)\n",
     "print('[ROW]  [SIGMOID]   [SOFTMAX(IS_3)]  [IS_SEVEN]')\n",
     "print('-----  ---------   ---------------  ----------')\n",
     "for i in range(len(sm_acts)):\n",
     "    sum_sigmoid = (acts[i][0] - acts[i][1]).sigmoid()\n",
     "    print(f' [{i}]    [{sum_sigmoid:5.3f}]        [{sm_acts[i][0]:5.3f}]       [{sm_acts[i][1]:5.3f}]')\n",
     "#sm_acts"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`--- FINAL LAYER ACTIVATION [2/2] [LOG LIKELIHOOD] ---`**\n",
+    "***\n",
+    "LOG LIKELIHOOD is [2/2] of CROSS ENTROPY LOSS\n",
+    "***"
    ]
   },
   {
