Use pandas table instead of print manual format

--- a/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
+++ b/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
@@ -644,11 +644,10 @@
     "from fastai.vision.core import torch\n",
     "from fastbook import plot_function\n",
     "\n",
-    "# Softmax is similar to sigmoid, here's a reminder of what sigmoid looks like\n",
-    "# Sigmoid when applied to a single column of activations, we will get a column\n",
+    "# Sigmoid when applied to a single column of activations, will yield a column\n",
     "# of values between 0 and 1\n",
-    "# But if we have MORE categories in our target (37 pet breeds in this case),\n",
-    "# @note 🧠 : we need an ACITVATION per CATEGORY as oppposed to Sigmoid's per COLUMN\n",
+    "# But if we have MORE > 2 categories in our target (37 pet breeds in this case),\n",
+    "# @note 🧠 : we need an ACITVATION per CATEGORY as oppposed a SINGLE column\n",
     "plot_function(torch.sigmoid, min=-4, max=4)"
    ]
   },
@@ -746,6 +745,9 @@
     }
    ],
    "source": [
+    "# @note 🧠 : pandas can be used to display the data in a tabular format!\n",
+    "import pandas as pd\n",
+    "\n",
     "# To reframe 3 or 7 binary activation to serve as a more general classifier, we\n",
     "# will go from applying SIGMOID() to 2 columns to just ONE column of DIFFERENCE\n",
     "# between ACTIVATION values for 3 and 7\n",
@@ -833,31 +835,114 @@
     "**`--- FINAL LAYER ACTIVATION [2/2] [LOG LIKELIHOOD] ---`**\n",
     "***\n",
     "LOG LIKELIHOOD is [2/2] of CROSS ENTROPY LOSS\n",
-    "***"
+    "***\n",
+    "\n",
+    " `CROSS ENTROPY` Loss :\n",
+    " - SOFTMAX is the first part\n",
+    " - LOG LIKELIHOOD is the second part\n",
+    "\n",
+    "Just as we moved from sigmoid to softmax, we need to extend the loss function to\n",
+    "work with more than just binary classification :\n",
+    "- Our `ACTIVATIONS` after SOFTMAX are between `0 and 1` summed to 1 for each row\n",
+    "- Our `TARGETS` are integers between `0 and 36` (37 breed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Three</th>\n",
+       "      <th>Seven</th>\n",
+       "      <th>Target</th>\n",
+       "      <th>Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.996316</td>\n",
+       "      <td>0.003684</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.996316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.019960</td>\n",
+       "      <td>0.980040</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.980040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.732999</td>\n",
+       "      <td>0.267001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.732999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.492392</td>\n",
+       "      <td>0.507608</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.507608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.791246</td>\n",
+       "      <td>0.208754</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.208754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.095742</td>\n",
+       "      <td>0.904258</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.095742</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "tensor([0.6108, 0.1791, 0.2400, 0.8138, 0.8118, 0.4369])"
+       "      Three     Seven  Target      Loss\n",
+       "0  0.996316  0.003684       0  0.996316\n",
+       "1  0.019960  0.980040       1  0.980040\n",
+       "2  0.732999  0.267001       0  0.732999\n",
+       "3  0.492392  0.507608       1  0.507608\n",
+       "4  0.791246  0.208754       1  0.208754\n",
+       "5  0.095742  0.904258       0  0.095742"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from fastai.vision.data import tensor\n",
-    "\n",
-    "# Cross Entropy Loss :\n",
-    "# - softmax is the first part\n",
-    "# - log likelihood is the second part\n",
     "\n",
     "# Log Likelihood\n",
     "targ = tensor([0,1,0,1,1,0])\n",
@@ -868,9 +953,17 @@
     "# when we push the activation for the correct label as HIGH as possible\n",
     "# we are also decreasing the activations for the remaining columns\n",
     "# This works for binary/2-catagories (3,7) but scales to N categories (0-9)\n",
-    "# TODO : The book formats the numbers as a table nicely ... figure out how to do\n",
-    "# that in Jupyter here\n",
-    "sm_acts[idx, targ]"
+    "loss = sm_acts[idx, targ]\n",
+    "\n",
+    "# @audit 🖶 : Verify that our loss and target are correct\n",
+    "data = []\n",
+    "for i in range(len(sm_acts)):\n",
+    "    row = sm_acts[i].tolist()\n",
+    "    row.append(targ[i].tolist())\n",
+    "    row.append(loss[i].tolist())\n",
+    "    data.append(row)\n",
+    "\n",
+    "pd.DataFrame(data, columns=[\"Three\", \"Seven\",\"Target\", \"Loss\"])"
    ]
   },
   {
