Chapter 5 inline instead of append data for table

--- a/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
+++ b/fastai_exercises/fast-ai-chapter05-image-classification.ipynb
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
        "5  1.069809  1.618714 -0.548905  0.366118     False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,13 +833,11 @@
     "# - This will let us handle an arbitrary number of categories\n",
     "\n",
     "# Let's walk through why this works ...\n",
-    "# @audit 🖶 -- Verify that SIGMOID() is applied to the DIFFERENCE between values\n",
     "data = []\n",
     "for i in range(len(acts)):\n",
-    "    # So what does the value of a pair of activations represent?\n",
-    "    row = acts[i].tolist()\n",
-    "    # A single pair of activations simply indicate the relative difference \n",
-    "    # confidence whether the input is a 3 or a 7\n",
+    "    # @audit-ok ☑ : So what does the value of a pair of activations represent?\n",
+    "    # Answer : A single pair of activations simply indicate the relative \n",
+    "    # difference confidence whether the input is a 3 or a 7\n",
     "    # - So the overall value does NOT MATTER, whether they SUM to be HIGH or LOW\n",
     "    # - What MATTERS is the RELATIVE DIFFERENCE between the two values : WHICH is \n",
     "    #   HIGHER and BY HOW MUCH\n",
@@ -850,11 +848,15 @@
     "    # - The LARGER the difference, the more confidence that the input is a 3\n",
     "    # - The SMALLER the difference, the more confidence that the input is a 7\n",
     "    is_three = sum_sigmoid > 0.5\n",
-    "    row.append(sum_row.tolist())\n",
-    "    row.append(sum_sigmoid.tolist())\n",
-    "    row.append(is_three.tolist())\n",
-    "    data.append(row)\n",
+    "    data.append([\n",
+    "        acts[i][0].tolist(), # 3\n",
+    "        acts[i][1].tolist(), # 7\n",
+    "        sum_row.tolist(), \n",
+    "        sum_sigmoid.tolist(), \n",
+    "        is_three.tolist()\n",
+    "    ])\n",
     "\n",
+    "# @audit 🖶 -- Verify that SIGMOID() is applied to the DIFFERENCE between values\n",
     "pd.DataFrame(data, columns=['3', '7', 'SUM', 'SIGMOID', 'IS_THREE'])"
    ]
   },
@@ -878,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -958,23 +960,25 @@
        "5   0.366118   0.633882  0.366118"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sm_acts = torch.softmax(acts, dim=1)\n",
-    "# @audit 🖶 : Verify that SOFTMAX returns same value as SIGMOID for 2 categories\n",
-    "# where both columns/categories sum to 1.0f\n",
     "data = []\n",
     "for i in range(len(sm_acts)):\n",
-    "    row = sm_acts[i].tolist()\n",
     "    # recalculating the sigmoid of the difference between the 3/7 columns\n",
     "    sum_sigmoid = (acts[i][0] - acts[i][1]).sigmoid()\n",
-    "    row.append(sum_sigmoid.tolist())\n",
-    "    data.append(row)\n",
+    "    data.append([\n",
+    "        sm_acts[i][0].tolist(), # 3\n",
+    "        sm_acts[i][1].tolist(), # 7\n",
+    "        sum_sigmoid.tolist()\n",
+    "    ])\n",
     "\n",
+    "# @audit 🖶 : Verify that SOFTMAX returns same value as SIGMOID for 2 categories\n",
+    "# where both columns/categories sum to 1.0f\n",
     "pd.DataFrame(data, columns=['SOFTMAX_3', 'SOFTMAX_7', 'SIGMOID'])\n",
     "#sm_acts"
    ]
@@ -1001,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1092,7 @@
        "5  0.366118  0.633882       0  0.366118"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,13 +1111,14 @@
     "# This works for binary/2-catagories (3,7) but scales to N categories (0-9)\n",
     "loss = sm_acts[idx, targ]\n",
     "\n",
-    "# @audit 🖶 : Verify that our loss and target are correct\n",
     "data = []\n",
     "for i in range(len(sm_acts)):\n",
-    "    row = sm_acts[i].tolist()\n",
-    "    row.append(targ[i].tolist())\n",
-    "    row.append(loss[i].tolist())\n",
-    "    data.append(row)\n",
+    "    data.append([\n",
+    "        sm_acts[i][0].tolist(), #3\n",
+    "        sm_acts[i][1].tolist(), #7\n",
+    "        targ[i].tolist(), \n",
+    "        loss[i].tolist()\n",
+    "    ])\n",
     "\n",
     "# sm_acts[idx, targ] visualized as a table, we can see that :\n",
     "# - the LOSS column is the result of using `idx`` and `targ`` to lookup `sm_acts`\n",
@@ -1125,22 +1130,15 @@
     "# - No need to worry about the other columns because SOFTMAX reduces the other \n",
     "#   labels (by amplifying the ONE correct labael)\n",
     "# - SOFTMAX by definition ensure that each `targ` tensor sums up to 1.0f\n",
+    "# @audit 🖶 : Verify that our loss and target are correct\n",
     "pd.DataFrame(data, columns=['3', '7', 'TARGET', 'LOSS'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([-0.6025, -0.4979, -0.1332, -0.0034, -0.4041, -0.3661]) # manual tensor \n",
-      "tensor([-0.6025, -0.4979, -0.1332, -0.0034, -0.4041, -0.3661]) # builtin tensor\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1162,31 +1160,39 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
+       "      <th>NLL_LOSS</th>\n",
+       "      <th>(-)SM_ACTS</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>manual</th>\n",
+       "      <th>0</th>\n",
        "      <td>-0.602469</td>\n",
-       "      <td>-0.497935</td>\n",
-       "      <td>-0.133188</td>\n",
-       "      <td>-0.00336</td>\n",
-       "      <td>-0.404051</td>\n",
-       "      <td>-0.366118</td>\n",
+       "      <td>-0.602469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>builtin</th>\n",
-       "      <td>-0.602469</td>\n",
+       "      <th>1</th>\n",
        "      <td>-0.497935</td>\n",
+       "      <td>-0.497935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>-0.133188</td>\n",
-       "      <td>-0.00336</td>\n",
+       "      <td>-0.133188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.003360</td>\n",
+       "      <td>-0.003360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>-0.404051</td>\n",
+       "      <td>-0.404051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.366118</td>\n",
        "      <td>-0.366118</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1194,12 +1200,16 @@
        "</div>"
       ],
       "text/plain": [
-       "                0         1         2        3         4         5\n",
-       "manual  -0.602469 -0.497935 -0.133188 -0.00336 -0.404051 -0.366118\n",
-       "builtin -0.602469 -0.497935 -0.133188 -0.00336 -0.404051 -0.366118"
+       "   NLL_LOSS  (-)SM_ACTS\n",
+       "0 -0.602469   -0.602469\n",
+       "1 -0.497935   -0.497935\n",
+       "2 -0.133188   -0.133188\n",
+       "3 -0.003360   -0.003360\n",
+       "4 -0.404051   -0.404051\n",
+       "5 -0.366118   -0.366118"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,16 +1225,23 @@
     "# function EQUIVALENT to our manual loss calculation above : sm_acts[idx, targ]\n",
     "# @note ⚠️ : DESPITE having LOG in the name, this Pytorch function does NOT \n",
     "# apply the LOG lol\n",
-    "builtin_tensor = F.nll_loss(sm_acts, targ, reduction='none')\n",
+    "nll_loss_tensor = F.nll_loss(sm_acts, targ, reduction='none')\n",
     "\n",
-    "# nll_loss applies the log afterwards, so the output values will be negative\n",
-    "manual_tensor = -sm_acts[idx, targ]\n",
-    "print(f'{manual_tensor} # manual tensor \\n{builtin_tensor} # builtin tensor')\n",
+    "# @audit-ok 🔎 : Explain how nll_loss applies the log afterwards, so the output \n",
+    "# values will be negative\n",
+    "sm_acts_tensor = -sm_acts[idx, targ]\n",
     "\n",
     "data = []\n",
-    "data.append(manual_tensor.tolist())\n",
-    "data.append(builtin_tensor.tolist())\n",
-    "pd.DataFrame(data, columns=['0', '1', '2', '3', '4', '5'], index=['manual', 'builtin'])"
+    "for i in range(len(builtin_tensor)):\n",
+    "    # @audit : Is there a way to transpose the nll_loss and sm_acts tensors\n",
+    "    # instead of rebuilding the table one row at a time?\n",
+    "    row = [\n",
+    "        nll_loss_tensor[i].tolist(), \n",
+    "        sm_acts_tensor[i].tolist()\n",
+    "    ]\n",
+    "    data.append(row)\n",
+    "# @audit 🖶 : Verify that our manual and builtin loss calculations are the same\n",
+    "pd.DataFrame(data, columns=['NLL_LOSS', '(-)SM_ACTS'])"
    ]
   },
   {
